# bash-loadable-defer

./: .clang-format  .clang-tidy  .gitignore  Makefile.in  README.md  configure  configure.ac  defer.c  trap_internals.h
.github/workflows/: makefile.yml
examples/: 01-lifo-cleanup.sh  02-independent-cleanups.sh  03-function-scope.sh  04-signal-handlers.sh  05-inspect-and-help.sh  README.md
test/: defer_test.sh
